--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="author" content="">
 		<link rel="icon" href="favicon.ico">
 		<!--Tab Title Text -->
-		<title>Emily Brooks Portfolio</title>
+		<title>Katherine Collins Portfolio</title>
 		<!-- Bootstrap core CSS -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -73,7 +73,7 @@
 			<div class="container">
 				<div class="slider-container">
 					<div class="intro-text">
-						<div class="intro-lead-in">Emily Brooks</div>
+						<div class="intro-lead-in">Katherine Collins</div>
 						<div class="intro-heading">Media Writing Portfolio</div>
 						<a href="#ref" class="page-scroll btn btn-xl">Reflection</a>
 					</div>
@@ -96,7 +96,7 @@
 						<div class="mz-module-about">
               <a class="page-scroll" href="#adpr"><i class="fa fa-bullhorn ot-circle"></i></a>
 							<h3>Advertising and Public Relations</h3>
-							<p>Visual ad for Lowth Entrepreneurship Center, podcast ad for Combat Sales, press pack for Spartan Spark, and PR Presentation for major</p>
+							<p>Visual ad for Sober Roots, podcast ad for Combat Sales, press pack for Coffee for Closers, and PR Presentation for AdPr</p>
 						</div>
 					</div>
 					<!-- end about module -->
@@ -105,7 +105,7 @@
 						<div class="mz-module-about">
               <a class="page-scroll" href="#jou"><i class="fa fa-newspaper-o ot-circle"></i></a>
 							<h3>Journalism</h3>
-							<p>A newspaper article about a University of Tampa event and a magazine article about innovation</p>
+							<p>A newspaper article about the Greek Variety Show and a magazine article about Taylor Patterson</p>
 						</div>
 					</div>
 					<!-- end about module -->
@@ -114,7 +114,7 @@
 						<div class="mz-module-about">
               <a class="page-scroll" href="#wsm"><i class="fa fa-mobile ot-circle"></i></a>
 							<h3>Web and Social Media</h3>
-							<p>A blog post about play, a microblog thread of a live event, and social media campaign for Yoga Mandhi</p>
+							<p>A blog post about Playing in the Sun, a microblog thread of a live pickle ball match, and social media campaign for Yoga Mandhi</p>
 						</div>
 					</div>
 					<!-- end about module -->
@@ -123,7 +123,7 @@
 						<div class="mz-module-about">
               <a class="page-scroll" href="#pod"><i class="fa fa-microphone ot-circle"></i></a>
 							<h3>Podcast</h3>
-							<p>A podcast episode about wordplay (audio and transcript)</p>
+							<p>A podcast episode about wordplay in Taylor Swift songs(audio and transcript)</p>
 						</div>
 					</div>
 					<!-- end about module -->
@@ -139,7 +139,7 @@
 				<div class="col-lg-12 text-center">
 					<div class="section-title">
 						<h2>Advertising and Public Relations</h2>
-						<p>Visual ad for Lowth Entrepreneurship Center, podcast ad for Combat Sales, press pack for Spartan Spark, and PR Presentation for major</p>
+						<p>A newspaper article about the Greek Variety Show and a magazine article about Taylor Patterson</p>
 					</div>
 				</div>
 			</div>
@@ -150,7 +150,7 @@
 						<figure class="effect-bubba">
 							<img src="LECAd.png" alt="Lowth Entrepreneurship Center Business Advertisement" class="img-responsive" />
 							<figcaption>
-								<h2>Lowth Entrepreneurship Center</h2>
+								<h2>Sober Roots</h2>
 								<p>Image-Text Advertisement</p>
 								<a href="#" data-toggle="modal" data-target="#Modal-1">View more</a>
 							</figcaption>
@@ -176,7 +176,7 @@
 					<div class="ot-portfolio-item">
 						<i class="fa fa-bullhorn fa-5x ot-circle"></i>
              <h3>Press Pack</h3>
-            <p>A <a href="PressPack.pdf">press pack</a> for Spartan Spark</p>
+            <p>A <a href="PressPack.pdf">press pack</a> for Coffee for Closers</p>
 					</div>
 				</div>
 				<!-- end portfolio item -->
@@ -184,7 +184,7 @@
 				<div class="col-sm-3">
 					<div class="ot-portfolio-item">
 					<i class="fa fa-users fa-5x ot-circle"></i>
-             <h3>PR Presentation for Major</h3>
+             <h3>Presentation for AdPr</h3>
             <p>A <a href="MajorPRPresentation.pdf">presentation</a> about your major</p>
 					</div>
 				</div>
@@ -200,7 +200,7 @@
 				<div class="col-lg-12 text-center">
 					<div class="section-title">
 						<h2>Print Journalism</h2>
-						<p>A newspaper article about a University of Tampa event and a magazine article about innovation</p>
+						<p>A newspaper article about the Greek Variety Show event and a magazine article about Taylor Patterson</p>
 					</div>
 				</div>
 			</div>
